# pve-cluster

./: .gitignore  Makefile  cpgtest.c
data/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in
data/PVE/: Cluster.pm  Corosync.pm  DataCenterConfig.pm  IPCC.pm  IPCC.xs  Makefile  Makefile.am  Makefile.in  SSHInfo.pm  gen-datacenter-pod.pl  pvecm
data/PVE/API2/: ClusterConfig.pm  Makefile
data/PVE/CLI/: Makefile  pvecm.pm
data/PVE/Cluster/: CertCache.pm  IPCConst.pm.awk  Makefile  Setup.pm
data/cts/: create_large_files.pl  create_many_files.pl
data/docs/: cluster.conf.ex
data/src/: Makefile  Makefile.am  Makefile.in  cfs-ipc-ops.h  cfs-plug-func.c  cfs-plug-link.c  cfs-plug-memdb.c  cfs-plug-memdb.h  cfs-plug.c  cfs-plug.h  cfs-utils.c  cfs-utils.h  check_memdb.c  confdb.c  confdb.h  create_pmxcfs_db.c  database.c  dcdb.c  dcdb.h  dfsm.c  dfsm.h  logger.c  logger.h  logtest.c  loop.c  loop.h  memdb.c  memdb.h  pmxcfs.c  quorum.c  quorum.h  server.c  server.h  status.c  status.h
data/test/: Makefile  corosync_parser_test.pl
data/test/corosync_configs/: multiple-nodes.conf  old.conf  single-node.conf
data/test/scripts/: benchmark-config-get-property.pl  test-broadcast-kv.pl  test-config-get-property.pl  test-verify-token.pl
debian/: changelog  conffiles  control  control.in  copyright  dirs  docs  init.d  install  libpve-cluster-api-perl.install  libpve-cluster-perl.install  libpve-notify-perl.install  maintscript  postinst  postrm  pve-cluster.default  pve-cluster.dirs  pve-cluster.install  pve-cluster.postinst  pve-cluster.preinst  pve-cluster.service  pve-rsyslog.conf  rules  sysctl.conf
debian/sysctl.d/: 10-pve.conf
src/: Makefile
src/PVE/: Cluster.pm  Corosync.pm  DataCenterConfig.pm  IPCC.pm  IPCC.xs  Makefile  Notify.pm  RRD.pm  SSHInfo.pm  pvecm  test.pl  test1.pl
src/PVE/API2/: ClusterConfig.pm  Makefile
src/PVE/CLI/: Makefile  pvecm.pm
src/PVE/Cluster/: Makefile  Setup.pm
src/pmxcfs/: .clang-format  Makefile  cfs-ipc-ops.h  cfs-plug-func.c  cfs-plug-link.c  cfs-plug-memdb.c  cfs-plug-memdb.h  cfs-plug.c  cfs-plug.h  cfs-utils.c  cfs-utils.h  check_memdb.c  confdb.c  confdb.h  create_pmxcfs_db.c  database.c  dcdb.c  dcdb.h  dfsm.c  dfsm.h  logger.c  logger.h  logtest.c  logtest2.c  loop.c  loop.h  memdb.c  memdb.h  pmxcfs.c  quorum.c  quorum.h  server.c  server.h  status.c  status.h
src/test/: Makefile  corosync_parser_test.pl  cpgtest.c  test_mac_prefix.pl
src/test/corosync_configs/: multiple-nodes.conf  single-node.conf
src/test/scripts/: benchmark-config-get-property.pl  create_large_files.pl  create_many_files.pl  create_vm_test.pl  test-broadcast-kv.pl  test-config-get-property.pl  test-verify-token.pl
